--- a/03-react-auth/package.json
+++ b/03-react-auth/package.json
@@ -25,6 +25,7 @@
     "@vitejs/plugin-react": "^4.0.3",
     "cypress": "^12.17.4",
     "eslint": "^8.45.0",
+    "eslint-plugin-cypress": "^2.14.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
